# the-agentic-flow

./: .gitignore  LICENSE  README.md  SKILL.md  STREAMLINED_WORKFLOW.md  bootstrap.py  package.json
.beads/: issues.jsonl
.claude/skills/create-beads-orchestration/: SKILL.md
.github/workflows/: release.yml
mcp-codex-delegator/: README.md  pyproject.toml
mcp-codex-delegator/src/mcp_codex_delegator/: __init__.py  codex_client.py  server.py
mcp-codex-delegator/tests/: test_agent_loader.py  test_codex_client.py  test_integration.py  test_server.py
mcp-provider-delegator/src/mcp_provider_delegator/: provider_client.py
scripts/: cli.js  postinstall.js
skills/create-beads-orchestration/: SKILL.md
templates/: CLAUDE.md  beads-workflow-injection-api.md  beads-workflow-injection-git.md  beads-workflow-injection.md  mcp.json.template  settings.json
templates/agents/: code-reviewer.md  discovery.md  merge-supervisor.md  security-detective.md  security-supervisor.md  worker-supervisor.md
templates/antigravity/: SKILL.md
templates/hooks/: block-orchestrator-tools.sh  clarify-vague-request.sh  enforce-bead-for-supervisor.sh  enforce-branch-before-edit.sh  enforce-codex-delegation.sh  enforce-concise-response.sh  enforce-discovery-confirmation.sh  enforce-sequential-dispatch.sh  inject-discipline-reminder.sh  log-dispatch-prompt.sh  memory-capture.sh  remind-inprogress.sh  session-start.sh  validate-completion.sh  validate-epic-close.sh
templates/memory/: recall.sh
templates/skills/subagents-discipline/: SKILL.md
